Removes z-index in hopes it fixes hyperlink issue

--- a/src/css/ads.less
+++ b/src/css/ads.less
@@ -25,8 +25,7 @@ section.tower-ad {
   float: right;
   position: relative;
   margin: 1em auto;
-  z-index: 0;
-
+  
   @media @tablet {
     width: 100%;
     float: none;
