--- a/src/css/page.less
+++ b/src/css/page.less
@@ -26,10 +26,6 @@
   text-transform: uppercase;
 }
 
-section {
-  display: block;
-}
-
 section.seahawks-content {
   width: calc(~'100% - 320px');
   float: left;
